Fixed header/footer align issue for Home.html

--- a/src/main/webapp/Styles/home.css
+++ b/src/main/webapp/Styles/home.css
@@ -1,3 +1,6 @@
+.HH-contents {
+    width: 100%;
+}
 .buzz-feed {
     width: 100%;
     overflow-y: auto;
